<resources>
    <string name="app_name">TANAW</string>
    <!-- Background Images -->
    <string name="homebg">homebg</string>


    <!-- Sign In -->
    <string-array name="institutions">
        <item>Select Institution</item>
        <item>Batangas State University</item>
        <item>De La Salle University</item>
        <item>Far Eastern University</item>
    </string-array>

    <!-- Top Nav -->
    <string name="hamburger">hamburger menu</string>
    <string name="logo">logo</string>
    <string name="profile">profile</string>

    <!-- Hamburger Menu -->
    <string name="username">UserName</string>

    <!-- Bottom Nav -->
    <string name="home">Home</string>
    <string name="gallery">Gallery</string>
    <string name="explore">Explore</string>
    <string name="inbox">Inbox</string>
    <string name="stickers">Stickers</string>

    <!-- Maps -->
    <string name="title_activity_maps">Maps</string>


    <!-- SDG Images -->
    <string name="sdg1">SDG1</string>
    <string name="sdg2">SDG2</string>
    <string name="sdg3">SDG3</string>
    <string name="sdg4">SDG4</string>
    <string name="sdg5">SDG5</string>
    <string name="sdg6">SDG6</string>
    <string name="sdg7">SDG7</string>
    <string name="sdg8">SDG8</string>
    <string name="sdg9">SDG9</string>
    <string name="sdg10">SDG10</string>
    <string name="sdg11">SDG11</string>
    <string name="sdg12">SDG12</string>
    <string name="sdg13">SDG13</string>
    <string name="sdg14">SDG14</string>
    <string name="sdg15">SDG15</string>
    <string name="sdg16">SDG16</string>
    <string name="sdg17">SDG17</string>


    <string name="MAPS_API_KEY">YOUR_GOOGLE_MAPS_API_KEY</string>

    <string name="terms_and_conditions2">By using The Album of Now and Wonders mobile application (hereafter referred to as “the App”), you agree to comply with and be bound by the following terms and conditions (the "Terms"). If you do not agree to these Terms, you should not use the App. These Terms may be updated from time to time, and you are advised to review them periodically.

1. Acceptance of Terms
By accessing or using the App, you agree to these Terms and the Privacy Policy. If you do not agree with any part of these Terms, you are not authorized to use the App.

2. Account Registration and Responsibilities
To use certain features of the App, you must create an account. When you register, you agree to provide accurate, current, and complete information. You are responsible for maintaining the confidentiality of your account and password and for all activities that occur under your account.
</string>
    <string name="terms_and_conditions3">
3. User Content
You retain ownership of any photos, videos, and other content you upload to the App ("User Content"). By uploading content, you grant us a non-exclusive, royalty-free, worldwide license to use, display, distribute, and modify your content within the App, subject to the terms of our Privacy Policy.

You are responsible for ensuring that any User Content you upload does not infringe on the rights of others, including intellectual property rights or privacy rights.
You may not upload, share, or post content that is offensive, illegal, harmful, or violates the rights of others.
4. Prohibited Activities
You agree not to engage in any of the following activities:

Use the App in any unlawful manner or for any illegal purpose.
Attempt to gain unauthorized access to the App or its associated systems.
Interfere with or disrupt the operation of the App, servers, or networks.
Engage in fraudulent activities, such as using false identities or providing false information.
Post or upload content that violates the rights of any person or entity.
        </string>
    <string name="terms_and_conditions4">
6. Third-Party Services
The App may contain links to third-party websites or services that are not operated by us. We have no control over, and assume no responsibility for, the content, privacy policies, or practices of any third-party services. You acknowledge and agree that we are not responsible for any damages or losses caused by your use of any third-party websites or services.

    7. Contact Information
    If you have any questions or concerns about these Terms and Conditions, please contact us at tanaw@gmail.com
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>