<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_100"
    tools:context=".InstitutionFragment">

    <!-- Toolbar for the header -->

    <!-- Top Posts Panel -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/teal_700"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Custom TextView for Toolbar title -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Top Posts"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/topPostsPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Grid Layout for Top Posts -->
        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            app:columnCount="3"
            app:orientation="horizontal"
            app:rowCount="2">

            <!-- Top Post 1 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/sdg1"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sdg_1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner"
                    android:text="Top 2"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Top Post 2 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:contentDescription="@string/sdg2"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sdg_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner"
                    android:layout_marginTop="4dp"
                    android:text="Top 1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <!-- Top Post 3 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/sdg3"
                    android:scaleType="centerCrop"
                    android:src="@drawable/sdg_3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="5dp"
                    android:background="@drawable/rounded_corner"
                    android:text="Top 3"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.gridlayout.widget.GridLayout>

        <!-- Gallery Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:padding="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/rounded_rectangle"
            android:text="Go to Gallery" />

    </LinearLayout>


    <!-- Vertical RecyclerView for Institutions -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/institutionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/topPostsPanel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
